--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 PORT=3000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=quanlynhahang
+MONGODB_URI=mongodb://localhost:27017/quanlynhahang
 JWT_SECRET=your-secret-key
